@startuml

hide empty members
'hide circle

interface Iterable<T> {
    iterator(): Iterator<T>
}
interface Stack<T> {
    push(e: T): Stack<T>
    pop(): Stack<T>
    top: T
    isEmpty(): Boolean
}

class StackEmpty <<(O,#FF7700)>>
class StackNotEmpty<T>
class Node<T> {
    elem: T
}
Node "?" <-- Node : next
Node <-- StackNotEmpty : head

Stack <|.. StackEmpty : T=Any
Stack <|.. StackNotEmpty
Iterable <|- Stack
@enduml